--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,7 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-font-family: 'Padauk';
+  --ion-font-family: 'Noto Sans JP';
   /** primary **/
   --ion-color-primary: #050505;
   --ion-color-primary-rgb: 67, 206, 187;
