--- a/src/global.scss
+++ b/src/global.scss
@@ -27,3 +27,4 @@
 
 @import "~ionic-color-picker/dist/assets/css/styles";
 @import url('https://fonts.googleapis.com/css2?family=Padauk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
