--- a/src/app/inc/detail-event/detail-event.page.scss
+++ b/src/app/inc/detail-event/detail-event.page.scss
@@ -1,7 +1,7 @@
 .live-event {
     border-radius: 10px;
     box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.16);
-    margin: 0 26px 26px 26px;
+    margin: 26px 26px 26px 26px;
     display: flex;
     justify-content: space-between;
 
@@ -43,7 +43,7 @@
             display: flex;
             align-items: center;
             color: #364F6B80;
-            font-size: 14px;
+            font-size: 18px;
             margin-right: 10px;
           }
         }
@@ -55,7 +55,7 @@
         align-items: center;
 
         div {
-          background: var(--ion-color-primary);
+          background: var(--ion-color-danger);
           box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.16);
           border-radius: 12px;
           padding: 15px;
@@ -69,7 +69,7 @@
         align-items: center;
 
         div {
-          background: var(--ion-color-warning);
+          background: var(--ion-color-success);
           box-shadow: 0px 3px 12px 2px rgba(0,0,0,0.16);
           border-radius: 12px;
           padding: 15px;
