--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,10 @@
+
+full-calendar{
+  height: 100% !important;
+  width: 100% !important;
+  margin-top: 20px;
+}
+
 .month-picker{
     .month-packer-item{
         background-color: rebeccapurple;
