--- a/src/app/inc/detail-event/detail-event.page.html
+++ b/src/app/inc/detail-event/detail-event.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div *ngIf="data">
-    <div class="live-event">
+    <div *ngIf="data.detail.status != 'block'" class="live-event">
   
       <div class="info">
         <div class="content">
@@ -53,5 +53,45 @@
 
      
     </div>
+
+
+    <div *ngIf="data.detail.status === 'block'" class="live-event">
+  
+      <div class="info">
+        <div class="content">
+          <h6>{{data.detail.title}}</h6>
+  
+          <div class="additional-info">
+            
+            <div class="attendees">
+              <p>Mitarbeiter: {{data.detail.employee_name}}</p>
+            </div>
+
+            <div class="attendees">
+              <p>Dauer: {{data.detail.duration}} Minute</p>
+            </div>
+
+            <div class="attendees">
+              <p *ngIf="data.detail.status == 'wait'">Status: Warten</p>
+              <p *ngIf="data.detail.status != 'wait'">Status: Erledigt</p>
+            </div>
+          </div>
+          <ion-button *ngIf="data.detail.status == 'wait'" (click)="done_appointment()" color="warning">Erledigt</ion-button>
+          <ion-button (click)="delete_appointment()" style="margin-left: 20px;" color="danger">Löschen</ion-button>
+        </div>
+  
+        <div class="indicator" *ngIf="data.detail.status == 'wait'">
+          <div>{{data.detail.start}}</div>
+        </div>
+        <div class="indicator fertig" *ngIf="data.detail.status == 'erledigt'">
+          <div>{{data.detail.start}}</div>
+        </div>
+       
+      </div>
+
+     
+    </div>
+
+
   </div>
 </ion-content>
