--- a/src/app/inc/general/general.page.html
+++ b/src/app/inc/general/general.page.html
@@ -59,6 +59,10 @@
     <ion-label position="floating">Zusatzinformation:</ion-label>
     <ion-textarea rows="3" cols="20" [(ngModel)]="data.detail.shop_extra_email"></ion-textarea>
   </ion-item>
+  <ion-item>
+    <ion-label position="floating">Stonierung-Text:</ion-label>
+    <ion-textarea rows="3" cols="20" [(ngModel)]="data.detail.shop_cancel_email"></ion-textarea>
+  </ion-item>
 
  
 </div>
